# triangle-game-2

./: .gitignore  README.md  build.sh
src/: CMakeLists.txt  board.cpp  main.cpp  peg.cpp
src/board/: CMakeLists.txt  board.cpp  board.h  move.cpp  move.h  move_history.cpp  move_history.h  peg.cpp  peg.h
src/game/: CMakeLists.txt  main.cpp  main.h  program_config.h  triangle-game-config.h.in
src/include/: board.h  peg.h  util.h
src/include/abstract/: printable.h
